[package]
name = "rust_rest_server"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = "1.0.130"
serde_json = "1.0.68"
chrono = "0.4.19"
async-std = { version = "1.10.0", features = [ "attributes" ] }
tide = "0.16.0"
sqlx = { version = "0.5.9", features = [ "runtime-async-std-native-tls", "postgres", "chrono", "json", "uuid" ] }

